# chatgpt-as-obsidian-vault

./: .gitignore  LICENSE  README.md  pyproject.toml
module/: parse_conversation_tree.py  types.py
notebooks/: investigating_conversation_tree.ipynb  scratch_pad.ipynb  testing_conversation_traversal_tree.ipynb
resources/: conversations_jsonschema.json
scripts/: jsonschema_schema_validator.py
tapestrymd/: __init__.py  logconfig.py  parse_conversation_tree.py  types.py
